rebuildd (0.3.7) unstable; urgency=low

  * Fix incorrect dependencies on init script (Closes: #541546)

 -- Julien Danjou <acid@debian.org>  Wed, 18 Nov 2009 20:10:40 +0100

rebuildd (0.3.6) unstable; urgency=low

  * Fix bug with new webpy in rebuildd-httpd (Closes: #536372)
  * Fix bashisms in maintenance script (Closes: #530179)
  * Add homepage (Closes: #529714)
  * Bump standard version

 -- Julien Danjou <acid@debian.org>  Tue, 04 Aug 2009 12:34:53 +0200

rebuildd (0.3.5) unstable; urgency=low

  * Bump standard version
  * Fix arch usage in httpd (Closes: #486146)
  * Fix typo in rebuildd.default (Closes: #497275)
  * Support passing other pbuilder options to rebuildd-init-build-system
    (Closes: #497295)

 -- Julien Danjou <acid@debian.org>  Sun, 31 Aug 2008 20:51:29 +0200

rebuildd (0.3.4) unstable; urgency=low

  * Add {} around variable names (Closes: #486143)

 -- Julien Danjou <acid@debian.org>  Fri, 13 Jun 2008 20:07:21 +0200

rebuildd (0.3.3) unstable; urgency=low

  * Switch to python2.5 which is now default

 -- Julien Danjou <acid@debian.org>  Wed, 07 May 2008 13:42:28 +0200

rebuildd (0.3.2) unstable; urgency=low

  * Set ip to 127.0.0.1 by default for obvious security reason
  * Fix bashisms in rebuildd-init-build-system (Closes: #455371)
  * Bump standard version
  * Fix dependency since python 2.5 is not default

 -- Julien Danjou <acid@debian.org>  Thu, 17 Apr 2008 11:35:22 +0200

rebuildd (0.3.1) unstable; urgency=low

  * Fix maintenance script for $arch support

 -- Julien Danjou <acid@debian.org>  Wed, 05 Dec 2007 08:17:29 +0100

rebuildd (0.3.0) unstable; urgency=low

  * Store timestamp of changed status
  * Add 'build_more_recent' option, to build only the
    more recent version of a package and set others to GIVEUP
  * Add a 'build_arch_any' to build (or not) package we want to build anywhere
    This works like another arch
  * Add 'priority' to package
  * Add quinn-diff support to rebuildd-job
  * Fix bashim in debian/rules